# binboi

./: .env.example  .gitignore  CONTRIBUTING.md  Caddyfile  Dockerfile  Dockerfile.caddy  Makefile  README  README.md  Readme  Readme.md  SECURITY.md  binboi.db  binboi.json  claude.md  control.bash  deploy.sh  docker-compose.yml  go.mod  go.sum  install.sh  manifest.json  miransas.json  package-lock.json
.github/: README.md
.github/workflows/: README.md  build.yaml  ci.yaml  cl.yaml  docker-publish.yml  go.yaml  release-distribution.yaml
.gocache/: README  trim.txt
.gocache/00/: 001326418286f9b1cbb43bc3e404ceaba22555524a56f0cb37303f4bd64bb93c-a  0018f8407511e063c6a7fec8f0054ebeb15412794e34704c495f71e830f9538c-a  001e7c6078d2a10f2e33b2479a8855b147a3e484e1d0e4d704481c123c1e9c70-d  004228920d42a7e2f1d68780e79e0347804825c36ff578d579a4218d00c40f12-d  004a68883de49bee774eab3f4115e9a6777b24203d76c27a8105d52bd3a7eb1c-a  005533534ef62ee32fcaa1833185f1941b2bb3e522883356c9ea12032ea66189-a  006d9ac60c045d053c3dc09ff6f41d491eee08aa0ff977852b8fcbf181504471-a  008bae6361b72d3cb462344eb966eb2b35ca1618f3db4670e66c18f1acb99e90-a  009ded32b773dbeb789be37751a3d6b69872bde91d6488dfe3d1e5b831cc6fa8-a  00ab57461fe4e4605abb749afb4ac36db798de6e02687cafe48cb5f7fb4ec351-a  00b6147a861d3423901b8a63371d6270cd4caeb2db439e4517b64ea5f1b484c6-d
.gocache/01/: 0113de368f9d4624c25769939e4828ddcd64a1597ae03a086729a7e48ae8049f-d  011e7d386cb18e1a212235cdc9197b7f2136e98f7725a47046c26f17eb5af92d-a  0123e55f03036a8b65624b5204d8063e3e837e8568c01cbb845a275fc6e54bad-a  0140030245b03f69cd0e4182ddcdc87464cfac0d7d601cbd365ce63b46373ecc-a  014966121e2f05769d8a2d09901f50ff6e1b29b091a5a634e3fd31dcb5c3b174-a  (+6 more)
_init/: dockerfile  license  markdown.md  yaml
assets/: README.md
client/: main.go
cmd/: README.md
configs/: README.md  binboi.env.example  binboi.env.example.md  binboi.production.env.example  config.production.example.yaml  config.yaml
demo/: hello.txt
docs/: README.md  antigravity-distribution.md  api-requirements.md  architecture-overview.md  deploy-readiness.md  distribution-release-automation.md  environments.md  install-channel-matrix.md  launch-blockers.md  production-domain-checklist.md  releasing-cli.md  request-archive-replay-runbook.md  smoke-test-checklist.md  staging-runbook.md  tsxt.md
go-https-demo/: main.go
internal/: README.md
packaging/: README.md
packaging/python/: README.md  pyproject.toml  setup.py
packaging/python/binboi_wrapper/: cli.py
pkg/: README.md
protocol/: message.go
rust/: Cargo.toml  README.md  build.rs
rust/src/: main.rs
scripts/: README.md  build-apt-repo.sh  build-debian-package.sh  sync-distribution-manifests.mjs  sync-project-manifests.sh  verify-distribution-manifests.sh
server/: config.go  main.go  tunnel.go
test/: index.html
web/: .env.example  README.md  auth.ts  components.json  drizzle.config.ts  mdx-components.tsx  mdx.d.ts  next.config.ts  package-lock.json  package.json  proxy.ts
(+2767 files in other folders)
