[package]
name = "miransas-binboi"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Self-hosted tunneling platform with a Go control plane, CLI agent, and Next.js product app."
readme = "README.md"
repository = "https://github.com/Miransas/binboi"
homepage = "https://github.com/Miransas/binboi"
authors = ["Sardor Azimov"]
keywords = ["binboi", "tunnel", "webhook", "proxy", "cli"]
categories = ["command-line-utilities", "development-tools"]
build = "build.rs"

[package.metadata.miransas]
verified = true
organization = "Miransas"
maintainer = "Sardor Azimov"
release_notes = "https://github.com/Miransas/binboi/releases"
dashboard_url = "http://127.0.0.1:3000/dashboard"
api_base_url = "http://127.0.0.1:8080"
proxy_base_url = "http://binboi.localhost:8000"
health_endpoint = "/api/v1/health"
metrics_endpoint = "/metrics"
server_command = "go run ./cmd/binboi-server"
cli_command = "go build -o binboi ./cmd/binboi-client"
web_command = "cd web && npm run dev"
api_port = 8080
tunnel_port = 8081
proxy_port = 8000
web_port = 3000
supported_platforms = ["darwin/amd64", "darwin/arm64", "linux/amd64", "linux/arm64"]

[[bin]]
name = "binboi"
path = "src/main.rs"
