[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binboi"
version = "0.4.0"
description = "Self-hosted tunneling platform with a Go control plane, CLI agent, and Next.js product app."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sardor Azimov" }]
maintainers = [{ name = "Sardor Azimov" }]
keywords = ["binboi", "tunnel", "webhook", "proxy", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: Software Development :: Build Tools"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Miransas/binboi"
Repository = "https://github.com/Miransas/binboi"
ReleaseNotes = "https://github.com/Miransas/binboi/releases"

[project.scripts]
binboi = "binboi_wrapper.cli:main"

[tool.setuptools]
packages = ["binboi_wrapper"]

[tool.miransas.binboi]
verified = true
organization = "Miransas"
maintainer = "Sardor Azimov"
dashboard_url = "http://127.0.0.1:3000/dashboard"
api_base_url = "http://127.0.0.1:8080"
proxy_base_url = "http://binboi.localhost:8000"
health_endpoint = "/api/v1/health"
metrics_endpoint = "/metrics"
server_command = "go run ./cmd/binboi-server"
cli_command = "go build -o binboi ./cmd/binboi-client"
web_command = "cd web && npm run dev"
api_port = 8080
tunnel_port = 8081
proxy_port = 8000
web_port = 3000
